--- a/index.html
+++ b/index.html
@@ -1,172 +1,182 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <title>Нёрдс — Главная</title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="page-body">
     <header class="header">
-      <a class="header__link-logo">
-        <img class="header__logo" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
-      </a>
+      <div class="header__wrapper wrapper">
+        <a class="header__link-logo">
+          <img class="header__logo" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+        </a>
 
-      <nav class="header__main-nav main-nav">
-        <ul class="main-nav__site-list site-list">
-          <li class="site-list__item">
-            <a href="#">Студия</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">Клиенты</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">Магазин</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">Контакты</a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="header__main-nav main-nav">
+          <ul class="main-nav__site-list site-list">
+            <li class="site-list__item">
+              <a href="#">Студия</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Клиенты</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">Магазин</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-      <a href="#" class="header__link-to-basket">Корзина</a>
+        <a href="#" class="header__link-to-basket">Корзина</a>
+      </div>
     </header>
 
     <main class="main">
       <h1 class="visually-hidden">Главная страница Нёрдс</h1>
 
       <section class="promo-slider">
-        <h2 class="visually-hidden">Промо-слайдер</h2>
+        <div class="promo-slider__wrapper wrapper">
+          <h2 class="visually-hidden">Промо-слайдер</h2>
 
-        <ul class="promo-slider__list">
-          <li class="promo-slider__list-item slide">
-            <h3 class="slide__title">Долго, дорого, скрупулезно.</h3>
-            <p class="slide__text">
-              Математически выверенный дизайн для вашего сайта или мобильного приложения.
-            </p>
-            <a href="#" class="slide__link-to-more">Узнать больше</a>
-          </li>
-          <li class="promo-slider__list-item slide">
-            <h3 class="slide__title">Любим математику как никто другой</h3>
-            <p class="slide__text">
-              Никакого креатива, только математические формулы для расчета идеальных пропорций
-            </p>
-            <a href="#" class="slide__link-to-more">Узнать больше</a>
-          </li>
-          <li class="promo-slider__list-item slide">
-            <h3 class="slide__title">Только ночь, только хардкор</h3>
-            <p class="slide__text">
-              Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
-            </p>
-            <a href="#" class="slide__link-to-more">Узнать больше</a>
-          </li>
-        </ul>
+          <ul class="promo-slider__list">
+            <li class="promo-slider__list-item slide">
+              <h3 class="slide__title">Долго, дорого, скрупулезно.</h3>
+              <p class="slide__text">
+                Математически выверенный дизайн для вашего сайта или мобильного приложения.
+              </p>
+              <a href="#" class="slide__link-to-more">Узнать больше</a>
+            </li>
+            <li class="promo-slider__list-item slide">
+              <h3 class="slide__title">Любим математику как никто другой</h3>
+              <p class="slide__text">
+                Никакого креатива, только математические формулы для расчета идеальных пропорций
+              </p>
+              <a href="#" class="slide__link-to-more">Узнать больше</a>
+            </li>
+            <li class="promo-slider__list-item slide">
+              <h3 class="slide__title">Только ночь, только хардкор</h3>
+              <p class="slide__text">
+                Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
+              </p>
+              <a href="#" class="slide__link-to-more">Узнать больше</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="services">
-        <h2 class="visually-hidden">Список услуг</h2>
+        <div class="services__wrapper wrapper">
+          <h2 class="visually-hidden">Список услуг</h2>
 
-        <ul class="services__list">
-          <li class="services__list-item service">
-            <h3 class="service__title">Веб-сайты</h3>
-            <p class="service__description">
-              Мир никогда не будет прежним после того как увидит ваш сайт!
-            </p>
-            <a href="#" class="service__link-order">Заказать</a>
-          </li>
+          <ul class="services__list">
+            <li class="services__list-item service">
+              <h3 class="service__title">Веб-сайты</h3>
+              <p class="service__description">
+                Мир никогда не будет прежним после того как увидит ваш сайт!
+              </p>
+              <a href="#" class="service__link-order">Заказать</a>
+            </li>
 
-          <li class="services__list-item service">
-            <h3 class="service__title">Приложения</h3>
-            <p class="service__description">
-              Покорите топ-10 приложений в AppStore и Google Play
-            </p>
-            <a href="#" class="service__link-order service__link-order--green">Заказать</a>
-          </li>
+            <li class="services__list-item service">
+              <h3 class="service__title">Приложения</h3>
+              <p class="service__description">
+                Покорите топ-10 приложений в AppStore и Google Play
+              </p>
+              <a href="#" class="service__link-order service__link-order--green">Заказать</a>
+            </li>
 
-          <li class="services__list-item service">
-            <h3 class="service__title">Презентации</h3>
-            <p class="service__description">
-              Вы даже не подозреваете, насколько вы изумительны!
-            </p>
-            <a href="#" class="service__link-order service__link-order--yellow">Заказать</a>
-          </li>
-        </ul>
+            <li class="services__list-item service">
+              <h3 class="service__title">Презентации</h3>
+              <p class="service__description">
+                Вы даже не подозреваете, насколько вы изумительны!
+              </p>
+              <a href="#" class="service__link-order service__link-order--yellow">Заказать</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="description-nerds">
-        <h2 class="visually-hidden">Описание компании Nёrds</h2>
+        <div class="description-nerds__wrapper wrapper">
+          <h2 class="visually-hidden">Описание компании Nёrds</h2>
 
-        <p class="description-nerds__text-slogan">
-          Мы — маленькая, но гордая дизайн-студия из Краснодара.
-        </p>
+          <p class="description-nerds__text-slogan">
+            Мы — маленькая, но гордая дизайн-студия из Краснодара.
+          </p>
 
-        <p class="description-nerds__text-principles">
-          Исповедуем принципы минимализма и чистоты.
-          Ставим математический расчет превыше креатива.
-          Работаем не покладая рук, как роботы
-        </p>
+          <p class="description-nerds__text-principles">
+            Исповедуем принципы минимализма и чистоты.
+            Ставим математический расчет превыше креатива.
+            Работаем не покладая рук, как роботы
+          </p>
 
-        <h3 class="description-nerds__title">Выполняем заказы на разработку:</h3>
-        <ul class="description-nerds__list-services">
-          <li class="description-nerds__list-services-item">
-            Веб-сайтов любой сложности
-          </li>
-          <li class="description-nerds__list-services-item">
-            Мобильных приложений для iOS и Android
-          </li>
-          <li class="description-nerds__list-services-item">
-            Слайдшоу и видео для корпоративных презентации
-          </li>
-        </ul>
+          <h3 class="description-nerds__title">Выполняем заказы на разработку:</h3>
+          <ul class="description-nerds__list-services">
+            <li class="description-nerds__list-services-item">
+              Веб-сайтов любой сложности
+            </li>
+            <li class="description-nerds__list-services-item">
+              Мобильных приложений для iOS и Android
+            </li>
+            <li class="description-nerds__list-services-item">
+              Слайдшоу и видео для корпоративных презентации
+            </li>
+          </ul>
 
-        <img class="description-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
+          <img class="description-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
 
-        <h3 class="description-nerds__table-title">С 2004 года любим точность во всем:</h3>
-        <table class="description-nerds__static-table">
-          <tr>
-            <td class="description-nerds__static-table-field">
-              Уровень самоотдачи
-            </td>
-            <td class="description-nerds__static-table-value">
-              146<span class="description-nerds__static-table-value-procent">%</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="description-nerds__static-table-field">
-              Соблюдение сроков
-            </td>
-            <td class="description-nerds__static-table-value">
-              100<span class="description-nerds__static-table-value-procent">%</span>
-            </td>
-          </tr>
-          <tr>
-            <td class="description-nerds__static-table-field">
-              Минимальная предоплата
-            </td>
-            <td class="description-nerds__static-table-value">
-              50<span class="description-nerds__static-table-value-procent">%</span>
-            </td>
-          </tr>
-        </table>
+          <h3 class="description-nerds__table-title">С 2004 года любим точность во всем:</h3>
+          <table class="description-nerds__static-table">
+            <tr>
+              <td class="description-nerds__static-table-field">
+                Уровень самоотдачи
+              </td>
+              <td class="description-nerds__static-table-value">
+                146<span class="description-nerds__static-table-value-procent">%</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="description-nerds__static-table-field">
+                Соблюдение сроков
+              </td>
+              <td class="description-nerds__static-table-value">
+                100<span class="description-nerds__static-table-value-procent">%</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="description-nerds__static-table-field">
+                Минимальная предоплата
+              </td>
+              <td class="description-nerds__static-table-value">
+                50<span class="description-nerds__static-table-value-procent">%</span>
+              </td>
+            </tr>
+          </table>
+        </div>
       </section>
 
       <section class="partners">
-        <h2 class="visually-hidden">Наши партнеры</h2>
+        <div class="partners__wrapper wrapper">
+          <h2 class="visually-hidden">Наши партнеры</h2>
 
-        <ul class="partners__list">
-          <li class="partners__list-item">
-            <a class="partners__link" href="#">Html Academy</a>
-          </li>
-          <li class="partners__list-item">
-            <a class="partners__link" href="#">Barbershop Borodinski</a>
-          </li>
-          <li class="partners__list-item">
-            <a class="partners__link" href="#">Pink</a>
-          </li>
-          <li class="partners__list-item">
-            <a class="partners__link" href="#">Mishka</a>
-          </li>
-        </ul>
+          <ul class="partners__list">
+            <li class="partners__list-item">
+              <a class="partners__link" href="#">Html Academy</a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__link" href="#">Barbershop Borodinski</a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__link" href="#">Pink</a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__link" href="#">Mishka</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="map">
@@ -184,28 +194,31 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__social social">
-        <h3 class="social__list">Социальные сети</h3>
-        <ul class="social-list">
-          <li class="social-list-item">
-            <a href="#">ВКонтакте</a>
-          </li>
-          <li class="social-list-item">
-            <a href="#">Фейсбук</a>
-          </li>
-          <li class="social-list-item">
-            <a href="#">Инстаграмм</a>
-          </li>
-        </ul>
+      <div class="footer__wrapper wrapper">
+        <div class="footer__social social">
+          <h3 class="social__list">Социальные сети</h3>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a href="#">ВКонтакте</a>
+            </li>
+            <li class="social-list-item">
+              <a href="#">Фейсбук</a>
+            </li>
+            <li class="social-list-item">
+              <a href="#">Инстаграмм</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__slogan">
+          <p class="footer__text-slogan">
+            Давайте дружить, это выгодно!
+          </p>
+          <p class="footer__text">
+            Скидка 10% для друзей из социальных сетей.
+          </p>
+        </div>
       </div>
-
-      <p class="footer__text-slogan">
-        Давайте дружить, это выгодно!
-      </p>
-
-      <p class="footer__text">
-        Скидка 10% для друзей из социальных сетей.
-      </p>
     </footer>
 
     <!-- Модальное окно "Напишите нам" -->
