--- a/catalog.html
+++ b/catalog.html
@@ -114,11 +114,19 @@
             <li class="sort-filter__link">
               <a href="#">По названию</a>
             </li>
-            <li class="sort-filter__link">
-              <a href="#">По убыванию</a>
+          </ul>
+          <ul class="sort-filter__order-links">
+            <li>
+              <a class="sort-filter__order-link sort-filter__order-link--active">
+                <span class="visually-hidden">По убыванию</span>
+                <!-- SVG -->
+              </a>
             </li>
-            <li class="sort-filter__link">
-              <a href="#">По возрастанию</a>
+            <li>
+              <a class="sort-filter__order-link" href="#">
+                <span class="visually-hidden">По возрастанию</span>
+                <!-- SVG -->
+              </a>
             </li>
           </ul>
         </section>
@@ -209,8 +217,10 @@
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
 
-        <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
-        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416"></iframe>
+        <div class="map__background">
+          <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
+          <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416" aria-label="Интерактивная карта"></iframe>
+        </div>
 
         <h3 class="map__title">Nёrds Design Studio</h3>
         <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
