--- a/index.html
+++ b/index.html
@@ -182,8 +182,10 @@
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
 
-        <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
-        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416" aria-label="Интерактивная карта"></iframe>
+        <div class="map__background">
+          <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
+          <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416" aria-label="Интерактивная карта"></iframe>
+        </div>
 
         <h3 class="map__title">Nёrds Design Studio</h3>
         <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
