Примерно сверстал сетку для слайдера до точной верстки

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2 class="visually-hidden">Промо-слайдер</h2>
 
           <ul class="promo-slider__list">
-            <li class="promo-slider__list-item slide">
+            <li class="promo-slider__list-item slide slide--active">
               <h3 class="slide__title">Долго, дорого, скрупулезно.</h3>
               <p class="slide__text">
                 Математически выверенный дизайн для вашего сайта или мобильного приложения.
