Создал сетку для блока Информации о компании, таблицу переразметил в список (не работают флексы)

--- a/index.html
+++ b/index.html
@@ -101,60 +101,64 @@
 
       <section class="description-nerds">
         <div class="description-nerds__wrapper wrapper">
-          <h2 class="visually-hidden">Описание компании Nёrds</h2>
+          <div class="description-nerds__text-wrapper">
+            <h2 class="visually-hidden">Описание компании Nёrds</h2>
 
-          <p class="description-nerds__text-slogan">
-            Мы — маленькая, но гордая дизайн-студия из Краснодара.
-          </p>
+            <p class="description-nerds__text-slogan">
+              Мы — маленькая, но гордая дизайн-студия из Краснодара.
+            </p>
 
-          <p class="description-nerds__text-principles">
-            Исповедуем принципы минимализма и чистоты.
-            Ставим математический расчет превыше креатива.
-            Работаем не покладая рук, как роботы
-          </p>
+            <p class="description-nerds__text-principles">
+              Исповедуем принципы минимализма и чистоты.
+              Ставим математический расчет превыше креатива.
+              Работаем не покладая рук, как роботы
+            </p>
 
-          <h3 class="description-nerds__title">Выполняем заказы на разработку:</h3>
-          <ul class="description-nerds__list-services">
-            <li class="description-nerds__list-services-item">
-              Веб-сайтов любой сложности
-            </li>
-            <li class="description-nerds__list-services-item">
-              Мобильных приложений для iOS и Android
-            </li>
-            <li class="description-nerds__list-services-item">
-              Слайдшоу и видео для корпоративных презентации
-            </li>
-          </ul>
+            <h3 class="description-nerds__title">Выполняем заказы на разработку:</h3>
+            <ul class="description-nerds__list-services">
+              <li class="description-nerds__list-services-item">
+                Веб-сайтов любой сложности
+              </li>
+              <li class="description-nerds__list-services-item">
+                Мобильных приложений для iOS и Android
+              </li>
+              <li class="description-nerds__list-services-item">
+                Слайдшоу и видео для корпоративных презентации
+              </li>
+            </ul>
+          </div>
 
-          <img class="description-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
+          <div class="description-nerds__table-logo-wrapper">
+            <img class="description-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
 
-          <h3 class="description-nerds__table-title">С 2004 года любим точность во всем:</h3>
-          <table class="description-nerds__static-table">
-            <tr>
-              <td class="description-nerds__static-table-field">
-                Уровень самоотдачи
-              </td>
-              <td class="description-nerds__static-table-value">
-                146<span class="description-nerds__static-table-value-procent">%</span>
-              </td>
-            </tr>
-            <tr>
-              <td class="description-nerds__static-table-field">
-                Соблюдение сроков
-              </td>
-              <td class="description-nerds__static-table-value">
-                100<span class="description-nerds__static-table-value-procent">%</span>
-              </td>
-            </tr>
-            <tr>
-              <td class="description-nerds__static-table-field">
-                Минимальная предоплата
-              </td>
-              <td class="description-nerds__static-table-value">
-                50<span class="description-nerds__static-table-value-procent">%</span>
-              </td>
-            </tr>
-          </table>
+            <h3 class="description-nerds__table-title">С 2004 года любим точность во всем:</h3>
+            <ul class="description-nerds__static-table">
+              <li>
+                <p class="description-nerds__static-table-field">
+                  Уровень самоотдачи
+                </p>
+                <p class="description-nerds__static-table-value">
+                  146<span class="description-nerds__static-table-value-procent">%</span>
+                </p>
+              </li>
+              <li>
+                <p class="description-nerds__static-table-field">
+                  Соблюдение сроков
+                </p>
+                <p class="description-nerds__static-table-value">
+                  100<span class="description-nerds__static-table-value-procent">%</span>
+                </p>
+              </li>
+              <li>
+                <p class="description-nerds__static-table-field">
+                  Минимальная предоплата
+                </p>
+                <p class="description-nerds__static-table-value">
+                  50<span class="description-nerds__static-table-value-procent">%</span>
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
