--- a/index.html
+++ b/index.html
@@ -186,16 +186,17 @@
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
 
-        <div class="map__background">
-          <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
-          <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416" aria-label="Интерактивная карта"></iframe>
+        <iframe class="map__iframe"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6081737285087!2d30.32153834626057!3d59.9386437000012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1591799581097!5m2!1sru!2sru"
+          width="1160" height="416" aria-label="Интерактивная карта"></iframe>
+        <div class="map__wrapper wrapper">
+          <div class="map__contacts">
+            <h3 class="map__title">Nёrds Design Studio</h3>
+            <address class="map__address">191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д. 19/8</address>
+            <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
+            <a class="map__btn-open-modal" href="#">Напишите нам</a>
+          </div>
         </div>
-
-        <h3 class="map__title">Nёrds Design Studio</h3>
-        <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
-        <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
-
-        <a class="map__btn-open-modal" href="#">Напишите нам</a>
       </section>
     </main>
 
