Сверстал большую часть сетки модальных окон

--- a/index.html
+++ b/index.html
@@ -233,24 +233,24 @@
       <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
-        <label class="modal-callback__label">
+        <label class="modal-callback__label modal-callback__label--name">
           Ваше имя:
           <input class="modal-callback__input-text" type="text" name="name" placeholder="Имя Фамилия">
         </label>
 
-        <label class="modal-callback__label">
+        <label class="modal-callback__label modal-callback__label--email">
           Ваш email:
           <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com">
         </label>
 
-        <label class="modal-callback__label">
+        <label class="modal-callback__label modal-callback__label--text">
           Текст письма
           <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме"></textarea>
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
-        <button class="modal-callback__btn-close" type="button">Закрыть</button>
       </form>
+      <button class="modal-callback__btn-close" type="button">Закрыть</button>
     </section>
   </body>
 </html>
