--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
           </ul>
         </nav>
 
-        <a href="#" class="header__link-to-basket">Корзина</a>
+        <a href="#" class="header__link-to-basket">
+          <svg class="header__svg-basket" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
+            <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
+            <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
+          </svg>
+          <span>Корзина</span>
+        </a>
       </div>
     </header>
 
@@ -42,26 +49,44 @@
           <h2 class="visually-hidden">Промо-слайдер</h2>
 
           <ul class="promo-slider__list">
-            <li class="promo-slider__list-item slide slide--active">
+            <li class="promo-slider__list-item slide slide--1 slide--active">
               <h3 class="slide__title">Долго, дорого, скрупулезно.</h3>
               <p class="slide__text">
-                Математически выверенный дизайн для вашего сайта или мобильного приложения.
+                Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.
               </p>
               <a href="#" class="slide__link-to-more">Узнать больше</a>
             </li>
-            <li class="promo-slider__list-item slide">
+            <li class="promo-slider__list-item slide slide--2">
               <h3 class="slide__title">Любим математику как никто другой</h3>
               <p class="slide__text">
                 Никакого креатива, только математические формулы для расчета идеальных пропорций
               </p>
               <a href="#" class="slide__link-to-more">Узнать больше</a>
             </li>
-            <li class="promo-slider__list-item slide">
+            <li class="promo-slider__list-item slide slide--3">
               <h3 class="slide__title">Только ночь, только хардкор</h3>
               <p class="slide__text">
                 Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
               </p>
               <a href="#" class="slide__link-to-more">Узнать больше</a>
+            </li>
+          </ul>
+
+          <ul class="promo-slider__btn-list">
+            <li class="promo-slider__btn-list-item">
+              <button class="promo-slider__btn promo-slider__btn--active">
+                <span class="visually-hidden">Слайд 1</span>
+              </button>
+            </li>
+            <li class="promo-slider__btn-list-item">
+              <button class="promo-slider__btn">
+                <span class="visually-hidden">Слайд 2</span>
+              </button>
+            </li>
+            <li class="promo-slider__btn-list-item">
+              <button class="promo-slider__btn">
+                <span class="visually-hidden">Слайд 3</span>
+              </button>
             </li>
           </ul>
         </div>
@@ -203,7 +228,7 @@
     <footer class="footer">
       <div class="footer__wrapper wrapper">
         <div class="footer__social social">
-          <h3 class="social__list">Социальные сети</h3>
+          <h3 class="visually-hidden">Социальные сети</h3>
           <ul class="social-list">
             <li class="social-list-item">
               <a href="#">ВКонтакте</a>
