Увлекся и сверстал блок услуг и блок о компании (почти), что по задании еще рано

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <h2 class="visually-hidden">Список услуг</h2>
 
           <ul class="services__list">
-            <li class="services__list-item service">
+            <li class="services__list-item service service--1">
               <h3 class="service__title">Веб-сайты</h3>
               <p class="service__description">
                 Мир никогда не будет прежним после того как увидит ваш сайт!
@@ -105,7 +105,7 @@
               <a href="#" class="service__link-order">Заказать</a>
             </li>
 
-            <li class="services__list-item service">
+            <li class="services__list-item service service--2">
               <h3 class="service__title">Приложения</h3>
               <p class="service__description">
                 Покорите топ-10 приложений в AppStore и Google Play
@@ -113,7 +113,7 @@
               <a href="#" class="service__link-order service__link-order--green">Заказать</a>
             </li>
 
-            <li class="services__list-item service">
+            <li class="services__list-item service service--3">
               <h3 class="service__title">Презентации</h3>
               <p class="service__description">
                 Вы даже не подозреваете, насколько вы изумительны!
