Сверстал блок карточек шаблонов с пагинацией

--- a/catalog.html
+++ b/catalog.html
@@ -144,64 +144,76 @@
 
           <ul class="patterns__list">
             <li class="patterns__list-item pattern">
-              <h3 class="pattern__title">
-                <a href="#">Sedona</a>
-              </h3>
               <img class="pattern__photo" src="img/img-sedona.png" width="358" height="578" alt="Фото сайта Седона">
-              <p class="pattern__description">
-                Информационный сайт для туристов
-              </p>
-              <button class="pattern__btn-price">9 900 ₽</button>
+              <div class="pattern__wrapper">
+                <h3 class="pattern__title">
+                  <a href="#">Sedona</a>
+                </h3>
+                <p class="pattern__description">
+                  Информационный сайт<br> для туристов
+                </p>
+                <button class="pattern__btn-price">9 900 ₽</button>
+              </div>
             </li>
             <li class="patterns__list-item pattern">
-              <h3 class="pattern__title">
-                <a href="#">Pink</a>
-              </h3>
               <img class="pattern__photo" src="img/img-pink.png" width="358" height="578" alt="Фото сайта Pink">
-              <p class="pattern__description">
-                Cайт приложения фильтра розового цвета
-              </p>
-              <button class="pattern__btn-price">9 900 ₽</button>
+              <div class="pattern__wrapper">
+                <h3 class="pattern__title">
+                  <a href="#">Pink App</a>
+                </h3>
+                <p class="pattern__description">
+                  Продуктовый лендинг приложения для iOS и Android
+                </p>
+                <button class="pattern__btn-price">9 900 ₽</button>
+              </div>
             </li>
             <li class="patterns__list-item pattern">
-              <h3 class="pattern__title">
-                <a href="#">Barbershop Borodinski</a>
-              </h3>
               <img class="pattern__photo" src="img/img-barbershop.png" width="358" height="578" alt="Фото сайта Барбершопа>">
-              <p class="pattern__description">
-                Сайт барбершопа для бородачей
-              </p>
-              <button class="pattern__btn-price">9 900 ₽</button>
+              <div class="pattern__wrapper">
+                <h3 class="pattern__title">
+                  <a href="#">Barbershop</a>
+                </h3>
+                <p class="pattern__description">
+                  Сайт салона красоты. Для мужчин, да.
+                </p>
+                <button class="pattern__btn-price">9 900 ₽</button>
+              </div>
             </li>
             <li class="patterns__list-item pattern">
-              <h3 class="pattern__title">
-                <a href="#">Mishka</a>
-              </h3>
               <img class="pattern__photo" src="img/img-mishka.png" width="358" height="578" alt="Фото сайта Седона">
-              <p class="pattern__description">
-                Милые штуки ручной работы для дома
-              </p>
-              <button class="pattern__btn-price">9 900 ₽</button>
+              <div class="pattern__wrapper">
+                <h3 class="pattern__title">
+                  <a href="#">Mishka</a>
+                </h3>
+                <p class="pattern__description">
+                  Интернет-магазин вязаных игрушек
+                </p>
+                <button class="pattern__btn-price">9 900 ₽</button>
+              </div>
             </li>
             <li class="patterns__list-item pattern">
-              <h3 class="pattern__title">
-                <a href="#">А+</a>
-              </h3>
               <img class="pattern__photo" src="img/img-aplus.png" width="358" height="578" alt="Фото сайта Седона">
-              <p class="pattern__description">
-                Обучающий сайт для образования
-              </p>
-              <button class="pattern__btn-price">9 900 ₽</button>
+              <div class="pattern__wrapper">
+                <h3 class="pattern__title">
+                  <a href="#">А Plus</a>
+                </h3>
+                <p class="pattern__description">
+                  Лендинг курсов повышения квалификации
+                </p>
+                <button class="pattern__btn-price">9 900 ₽</button>
+              </div>
             </li>
             <li class="patterns__list-item pattern">
-              <h3 class="pattern__title">
-                <a href="#">Кваст</a>
-              </h3>
               <img class="pattern__photo" src="img/img-kvast.png" width="358" height="578" alt="Фото сайта Седона">
-              <p class="pattern__description">
-                Продуктовый сайт для продажи крафтового пива
-              </p>
-              <button class="pattern__btn-price">9 900 ₽</button>
+              <div class="pattern__wrapper">
+                <h3 class="pattern__title">
+                  <a href="#">Кваст</a>
+                </h3>
+                <p class="pattern__description">
+                  Промо-сайт производителя крафтового кваса
+                </p>
+                <button class="pattern__btn-price">9 900 ₽</button>
+              </div>
             </li>
           </ul>
 
@@ -215,7 +227,7 @@
             <li class="patterns__pagination-item">
               <a href="#">3</a>
             </li>
-            <li class="patterns__pagination-item">
+            <li class="patterns__pagination-item patterns__pagination-item--next">
               <a href="#">Следующая</a>
             </li>
           </ul>
